--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                     <div class="article__text-box">
                         <p class="article__aftor">By Claire Robinson</p>
                         <h3 class="article__new-title">
+                            <a class="article__link" href="">
                             Receive money in any currency with no fees
+                        </a>
                         </h3>
                         <p class="article__text">
                             The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …
@@ -124,7 +126,9 @@
                     <div class="article__text-box">
                         <p class="article__aftor">By Wilson Hutton</p>
                         <h3 class="article__new-title">
+                            <a class="article__link" href="">
                             Treat yourself without worrying about money
+                        </a>
                         </h3>
                         <p class="article__text">
                             Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …
@@ -135,7 +139,9 @@
                     <div class="article__text-box">
                         <p class="article__aftor">By Wilson Hutton</p>
                         <h3 class="article__new-title">
+                            <a class="article__link" href="">
                             Take your Easybank card wherever you go
+                        </a>
                         </h3>
                         <p class="article__text">
                             We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …
@@ -146,7 +152,9 @@
                     <div class="article__text-box">
                         <p class="article__aftor">By Claire Robinson</p>
                         <h3 class="article__new-title">
+                            <a class="article__link" href="">
                             Our invite-only Beta accounts are now live!
+                        </a>
                         </h3>
                         <p class="article__text">
                             After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...
