--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     </li>
                 </ul>
                 <a class="invite" href="#">Request Invite</a>
+                <button class="start__btn" type="button"></button>
             </div>
         </div>
     </header>
